RESOLVED FIXED93600
[GTK] Default signal handler for WebKitWebView::should-show-delete-interface-for-element overrides default result
https://bugs.webkit.org/show_bug.cgi?id=93600
Summary [GTK] Default signal handler for WebKitWebView::should-show-delete-interface-...
Martin Robinson
Reported 2012-08-09 02:03:48 PDT
Since the default signal handler for WebKitWebView::should-show-delete-interface-for-element overrides the default value, which means that the delete interface still appears.
Attachments
Patch (2.03 KB, patch)
2012-08-09 05:06 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-08-09 05:06:20 PDT
Xan Lopez
Comment 2 2012-08-09 05:22:51 PDT
Comment on attachment 157436 [details] Patch Hrm, should we change the thing in the class struct to be a dummy pointer?
Martin Robinson
Comment 3 2012-08-09 05:25:40 PDT
Do you mean should_allow_editing_action? If so, it's used by other editing signals, so we have to keep it around.
Xan Lopez
Comment 4 2012-08-09 05:27:52 PDT
Comment on attachment 157436 [details] Patch I see! r=me
WebKit Review Bot
Comment 5 2012-08-09 11:08:31 PDT
Comment on attachment 157436 [details] Patch Rejecting attachment 157436 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/13473043
WebKit Review Bot
Comment 6 2012-08-13 03:36:03 PDT
Comment on attachment 157436 [details] Patch Clearing flags on attachment: 157436 Committed r125407: <http://trac.webkit.org/changeset/125407>
WebKit Review Bot
Comment 7 2012-08-13 03:36:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.